--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,9 @@
-<h1><%= t ".home" %> </h1>
-<p>
+<div class="center jumbotron">
+  <h1><%= t ".home" %> </h1>
+  <p>
   <%= t(".text_book", link_to_book: link_to(t(".link_text"),
    "https://www.railstutorial.org/")).html_safe %>
-</p>
+  </p>
+  <%= link_to(t(".sign_up"), signup_path, class: "btn btn-lg btn-primary") %>
+</div>
+  <%= link_to image_tag(t(".rails_png"), alt: "Rails logo"), t(".railsorg") %>
